--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root {
   --primary: #b6895b;
   --bg: #010101;
+  --color: #675d50;
 }
 
 * {
@@ -18,7 +19,7 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: var(--bg);
+  background-color: #f3deba;
   color: #fff;
 }
 
@@ -81,6 +82,48 @@ body {
   display: none;
 }
 
+.navbar .navbar-extra input {
+  color: #000000;
+  margin: 0 0.5rem;
+}
+
+/* Dropdown */
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black !important;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 /* Hero Section */
 .hero {
   min-height: 100vh;
@@ -123,7 +166,7 @@ body {
   font-size: 1.6rem;
   margin-top: 1rem;
   line-height: 1.2;
-  font-weight: 100;
+  font-weight: 400;
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
   mix-blend-mode: difference;
 }
@@ -137,16 +180,18 @@ body {
 
 .about h2,
 .product h2,
-.contact h2 {
+.contact h2,
+.piagam h2 {
   text-align: center;
   font-size: 2.6rem;
   margin-bottom: 3rem;
 }
 
-.about h2 span,
-.product h2 span,
-.contact h2 span {
-  color: var(--primary);
+.about h2,
+.product h2,
+.contact h2,
+.piagam h2 {
+  color: #65647c;
 }
 
 .about .row {
@@ -169,13 +214,15 @@ body {
 .about .row .content h3 {
   font-size: 1.8rem;
   margin-bottom: 1rem;
+  color: var(--color);
 }
 
 .about .row .content p {
   margin-bottom: 0.8rem;
   font-size: 1.3rem;
-  font-weight: 100;
+  font-weight: 400;
   line-height: 1.6;
+  color: var(--color);
 }
 
 /* Produk Section */
@@ -187,8 +234,13 @@ body {
 .product p,
 .contact p {
   text-align: center;
-  font-weight: 100;
+  font-weight: 400;
   line-height: 1.6;
+  color: var(--color);
+}
+
+.product h3 {
+  color: var(--color);
 }
 
 .product .row {
@@ -212,16 +264,27 @@ body {
   margin: 1rem auto 0.5rem;
 }
 
-.product .row {
+.piagam {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
-.product .row .product-img {
-  flex: 1 1 45rem;
+.row {
+  display: flex;
+  justify-content: center;
 }
 
-.product .row .product-img img {
-  width: 100%;
+.piagam-img {
+  margin: 10px;
+}
+
+.piagam-img img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 /* Contact Section */
@@ -294,11 +357,12 @@ footer .links a:hover {
 
 footer .links {
   margin-bottom: 1.4rem;
+  display: block;
 }
 
 footer .links a {
   color: #fff;
-  padding: 0.7rem 1rem;
+  padding: 1rem;
 }
 
 footer .credit {
@@ -308,6 +372,27 @@ footer .credit {
 footer .credit a {
   color: var(--bg);
   font-weight: 700;
+}
+
+footer .kontak {
+  text-align: left;
+  padding: 1rem;
+}
+
+.kontak a p {
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+  margin: 5px 0;
+}
+
+.sosmed {
+  display: flex;
+  justify-content: space-around;
+}
+
+.partner {
+  padding: 1rem;
 }
 
 /* Media Queries */
