--- a/css/style.css
+++ b/css/style.css
@@ -234,15 +234,35 @@ body {
 }
 
 .column {
-  flex: 1;
-  padding: 10px;
-  border: 1px solid #000000;
-  box-sizing: border-box;
-  text-align: center;
+  width: 100%;
+  border-collapse: collapse;
+  box-shadow: 0 0 10px var(--bg);
 }
 
-h4 {
+.column th,
+.column td {
+  padding: 12px 15px;
+  text-align: left;
+  border-bottom: 1px solid #000000;
   color: #000000;
+}
+
+.column th {
+  background-color: #f2f2f2;
+}
+
+.column tr:hover {
+  background-color: #a78c8c;
+}
+
+.column th:first-child,
+.column td:first-child {
+  padding-left: 20px;
+}
+
+.column th:last-child,
+.column td:last-child {
+  padding-right: 20px;
 }
 
 /* Icon  */
